--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Weather Dashboard</title>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400&family=Merriweather:wght@700&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" href="./Assets/jass.css" />
-    <link rel="stylesheet" href="./Assets/style.css" />
+    <link rel="stylesheet" href="assets/jass.css" />
+    <link rel="stylesheet" href="assets/style.css" />
 </head>
 
 <body>
@@ -38,7 +38,7 @@
         </div>
     </div>
 
-    <script src="./assets/script.js"></script>
+    <script src="assets/script.js"></script>
 </body>
 
 </html>
